[CSS Regions] Layers inside the RenderFlowThread should be collected by the layer of RenderView https://bugs.webkit.org/show_bug.cgi?id=117270

Reviewed by David Hyatt.

RenderNamedFlowThreads are attached to the RenderView, but they are painted
and hit-tested through their regions. The easiest way to prevent the RenderView
from seeing the RenderNamedFlowThreads as its own children was to avoid collecting
the layers of the RenderNamedFlowThreads as children layers of the RenderView.

However, most of the code is analyzing the layers tree starting from the root,
so having the RenderNamedFlowThread participate in the layer tree is needed
in order to enable compositing for layers inside the flow thread.

This patch makes the RenderNamedFlowThread visible to the RenderView, but
ignores it when iterates the children of the RenderView in paint and hit-test methods.

No new tests, no visible changes.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintList):
(WebCore::RenderLayer::hitTestList):
(WebCore::RenderLayer::calculateLayerBounds):
(WebCore::RenderLayer::collectLayers):
* rendering/RenderTreeAsText.cpp:
(WebCore::writeLayers):


Canonical link: https://commits.webkit.org/135602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151339 268f45cc-cd09-0410-ab3c-d52691b4dbfc